<resources>
    <string name="app_name">App Scheduler</string>
    <string name="add_new_schedule">New schedule</string>
    <string name="app">Select your app</string>
    <string name="app_list">App list</string>
    <string name="cancel">Cancel</string>
    <string name="date_today">Today</string>
    <string name="description">Schedule description</string>
    <string name="edit_schedule">Edit schedule</string>
    <string name="empty_fields_message">One or more fields are empty</string>
    <string name="enable_overlay_permission_action">Click the button below, enable the permission for \"#APP_NAME#\" and click back.</string>
    <string name="enable_overlay_permission_message">\n\n\n"\"#APP_NAME#\" needs Overlay permission.
Android 10 (API level 29) and higher place restrictions on \n-when apps can start activities \n-when the app is running in the background.\n\n\n
In order for this app to work properly on your device, you must grant the SYSTEM_ALERT_WINDOW permission."</string>
    <string name="enable_permission">Enable Permission</string>
    <string name="enable_permission_action">ENABLE PERMISSION</string>
    <string name="exit">Exit</string>
    <string name="invalid_date">Invalid date</string>
    <string name="name">Name</string>
    <string name="new_schedule_service">New schedule service</string>
    <string name="no_data">No data</string>
    <string name="no_info_meets_search_criteria">No information meets the search criteria</string>
    <string name="no_results">No results</string>
    <string name="no_scheduling_set">No scheduling set</string>
    <string name="no_service">"No schedule service in the database.
Create new one by clicking the add button at the top"</string>
    <string name="overlay_permission_enabled_action">Click next to start</string>
    <string name="overlay_permission_enabled_message">"You can now start using \"#APP_NAME#\".\n
NOTE: Scheduling accuracy is not high to optimize battery usage."</string>
    <string name="overlay_permission_enabled_title">Are you ready?</string>
    <string name="overlay_settings">Permission Settings</string>
    <string name="problem_detected">Problem Detected</string>
    <string name="refresh">Refresh</string>
    <string name="run_task">Run task</string>
    <string name="save">Save</string>
    <string name="scheduling">Set scheduling</string>
    <string name="scheduling_off">Scheduling off</string>
    <string name="scheduling_on">Scheduling on</string>
    <string name="scheduling_set">Scheduling set</string>
    <string name="search">Search</string>
    <string name="service_changed_exit">Do you want to exit without confirming the latest changes?</string>
    <string name="set_future_date">You must set a future date</string>
    <string name="set_scheduling_start">Set scheduling start</string>
    <string name="start_action">START</string>
    <string name="task">Task</string>
    <string name="text">Text</string>
    <string name="unavailable">Unavailable</string>
    <string name="update">Update</string>
    <string name="wizard_exit">Are you sure you want to quit the configuration?</string>
    <string name="yes">Yes</string>
    <string name="image">image</string>
    <string name="date">DATE</string>
    <string name="off">OFF</string>
    <string name="repeat_task_every">Repeat task every</string>
    <string name="interval">Interval</string>
    <string name="_1">1</string>
</resources>