<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tTopBar"
        android:layout_width="fill_parent"
        android:layout_height="?actionBarSize"
        android:background="?colorPrimary"
        android:elevation="4.0dip"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16.0dip">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24.0dip"
                android:text="@string/app"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:id="@+id/lAppSelector"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_transparent"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="5.0dip">

                <RelativeLayout
                    android:layout_width="@dimen/header_circle_radius_large"
                    android:layout_height="@dimen/header_circle_radius_large"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="8.0dip">

                    <ImageView
                        android:id="@+id/iAppIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/image"
                        android:src="@mipmap/ic_help_outline_black_48dp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0"
                    android:orientation="vertical"
                    android:padding="8.0dip">

                    <TextView
                        android:id="@+id/tAppName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="@color/blue_grey_900"
                        android:textSize="16.0sp" />

                    <TextView
                        android:id="@+id/tAppPackageName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textColor="@color/blue_grey_500"
                        android:textSize="12.0sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip"
                android:text="@string/name"
                android:textColor="@color/colorPrimary"
                android:visibility="gone" />

            <EditText
                android:id="@+id/eName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapSentences|textMultiLine"
                android:textAppearance="?android:textAppearance"
                android:textColor="@android:color/black"
                android:visibility="gone" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip"
                android:text="@string/text"
                android:textColor="@color/colorPrimary"
                android:visibility="gone" />

            <EditText
                android:id="@+id/eText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text"
                android:inputType="textCapSentences|textMultiLine"
                android:textAppearance="?android:textAppearance"
                android:textColor="@android:color/black"
                android:visibility="gone" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip"
                android:text="@string/scheduling"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="5.0dip">

                    <ImageButton
                        android:id="@+id/bEnable"
                        android:layout_width="50.0dip"
                        android:layout_height="50.0dip"
                        android:layout_gravity="center_vertical"
                        android:clickable="false"
                        android:contentDescription="@string/image"
                        android:src="@mipmap/ic_alarm_off_white_24dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0"
                    android:orientation="vertical"
                    android:padding="5.0dip">

                    <LinearLayout
                        android:id="@+id/lHour"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_button_transparent"
                        android:orientation="horizontal"
                        android:padding="10.0dip">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/image"
                            android:paddingEnd="10.0dip"
                            android:src="@mipmap/ic_access_time_black_18dp"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/tHour"
                            style="@style/StandardTextViewTitleStyle"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:text="@string/set_scheduling_start"
                            android:textSize="18.0sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lDate"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_button_transparent"
                        android:orientation="horizontal"
                        android:padding="10.0dip">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/image"
                            android:paddingEnd="10.0dip"
                            android:src="@mipmap/ic_event_note_black_18dp"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/tDate"
                            style="@style/GenericGreyTextViewSubTitleStyle"
                            android:ellipsize="start"
                            android:singleLine="true"
                            android:text="@string/date"
                            android:textSize="12.0sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10.0dip"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/tStatus"
                            style="@style/GenericTextView3rdLevelStyle"
                            android:ellipsize="start"
                            android:singleLine="true"
                            android:text="@string/off"
                            android:textColor="@color/blue_grey_300"
                            android:textSize="11sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5.0dip"
                        android:visibility="gone">

                        <CheckBox
                            android:id="@+id/cConfirmTask"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:button="@drawable/custom_checkbox_metro"
                            android:focusable="false"
                            android:freezesText="false"
                            android:padding="5.0dip"
                            android:text="@string/task"
                            android:visibility="visible" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10.0dip">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/image"
                            android:paddingEnd="10.0dip"
                            android:src="@mipmap/ic_repeat_black_18dp"
                            tools:ignore="RtlSymmetry" />

                        <CheckBox
                            android:id="@+id/cRepeat"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:button="@drawable/custom_checkbox_metro"
                            android:focusable="false"
                            android:freezesText="false"
                            android:padding="5.0dip"
                            android:text="@string/repeat_task_every"
                            android:visibility="visible" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lInterval"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone"
                        android:baselineAligned="false">

                        <LinearLayout
                            android:layout_width="0.0dip"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1.0"
                            android:orientation="vertical"
                            android:padding="5.0dip">

                            <EditText
                                android:id="@+id/eInterval"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/interval"
                                android:inputType="number"
                                android:maxLength="3"
                                android:singleLine="true"
                                android:text="@string/_1"
                                android:textAppearance="?android:textAppearance"
                                android:textColor="@android:color/black"
                                android:textSize="14.0sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0.0dip"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1.0"
                            android:orientation="vertical"
                            android:padding="5.0dip">

                            <Spinner
                                android:id="@+id/sIntervals"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip"
                android:text="@string/description"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/eDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textCapSentences|textMultiLine"
                android:textAppearance="?android:textAppearance"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>